[project]
name = "injectdb"
version = "0.0.1"
description = "A Python library for detecting SQL injection patterns in input strings. Designed mainly for AI agents."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["maturin>=1.7"]
build-backend = "maturin"

[tool.maturin]
module-name = "injectdb"
bindings = "pyo3"
features = ["pyo3/extension-module"]

[dependency-groups]
dev = ["maturin>=1.12.6", "pytest>=9.0.2"]

[tool.pytest.ini_options]
addopts = "--color=yes --durations=10"
testpaths = ["tests"]
